# claw-ops-center

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  assistant-orchestrator-RESEARCH.md  config.yaml  langgraph.json  main.py  pyproject.toml  requirements.txt
docs/: 2026-05-02-langgraph-flow-design.md  2026-05-03-per-message-classify-and-send-design.md  mcp-server-integration.md
docs/plans/: 2026-05-02-signal-collector.md  2026-05-03-dev-tool-signal-classifier.md  2026-05-03-per-message-classify-and-send.md
docs/superpowers/plans/: 2026-05-05-telegram-enrich-node.md
docs/superpowers/specs/: 2026-05-03-dev-tool-signal-classifier-design.md  2026-05-05-telegram-enrich-node-design.md  (+1 more)
news/: config.py  graph.py  runner.py  state.py
news/mcp_server/: __init__.py  __main__.py  runtime.py  server.py
news/nodes/: analyzer.py  email_analyzer.py  email_collector.py  email_dedup.py  gmail_client.py  sender.py  telegram_analyzer.py  telegram_collector.py  telegram_dedup.py  telegram_enricher.py  telegram_extractor.py
news/pipelines/: email.py  telegram.py
news/prompts/: __init__.py  email_classify.py  loader.py  telegram_classify.py
openclaw/: auth.py  config.py  graph.py  orchestrator.py  runner.py  state.py  telegram_adapter.py
openclaw/nodes/: analyzer.py  email_collector.py  sender.py  telegram_collector.py
scripts/: gen_gmail_token.py  gen_session.py
tests/: conftest.py  test_analyzer.py  test_config.py  test_email_analyzer.py  test_email_collector.py  test_email_dedup.py  test_gmail_client.py  test_graph.py  test_mcp_server.py  test_sender.py  test_state.py  test_telegram_adapter.py  test_telegram_analyzer.py  test_telegram_collector.py  test_telegram_dedup.py  test_telegram_enricher.py  test_telegram_extractor.py
(+2 files in other folders)
