[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claw-ops-center"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "langgraph==1.1.10",
    "langgraph-cli[inmem]>=0.1.0",
    "langgraph-checkpoint-sqlite==3.0.3",
    "openai>=2.0.0",
    "python-telegram-bot==22.7",
    "pyrogram==2.0.106",
    "tgcrypto",
    "pydantic-settings>=2.0.0",
    "mcp>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pre-commit>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["news"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "SIM",      # simplify
    "C4",       # comprehensions
    "RET",      # return style
    "PTH",      # pathlib over os.path
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
